--- a/index.html
+++ b/index.html
@@ -381,7 +381,25 @@
         <div class="details-container color-container"
         style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
         <div class="article-container">
-          <img src="./assets/Screenshot 2024-02-10 155211.jpg" alt="Project 1" class="project-img" />
+          <img src="./assets/ELECTRIC VEHICLE.jpg" alt="Project 1" class="project-img" />
+        </div>
+        <h2>Electric Vehicle Data Analysis</h2>
+        <p style="color: black;">The Electric Vehicle Data Analysis project involved in-depth exploration and visualization of electric vehicle (EV) data using Microsoft Excel. Leveraging advanced features such as Pivot Tables and various chart types, this project aimed to extract.
+        </p><br>
+        <div class="btn-container">
+          <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-5.html');">
+            Live Project
+          </button>
+
+          <img src="./assets/excel (1).png" alt="My LinkedIn profile" class="icon" />
+
+        </div>
+      </div>
+
+        <div class="details-container color-container"
+        style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+        <div class="article-container">
+          <img src="./assets/Bank loan.jpg" alt="Project 1" class="project-img" />
         </div>
         <h2>Bank Loan Report</h2>
         <p style="color: black;"> In our Bank Loan Report project, we aim to visually represent critical loan-related metrics and trends using a variety of chart types. These charts will provide a clear and insightful view of our lending operations, facilitating data-driven decision-making...
@@ -397,6 +415,22 @@
 
         </div>
       </div>
+
+      <div class="details-container color-container"
+      style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+      <div class="article-container">
+        <img src="./assets/Amazon.jpg" alt="Project 1" class="project-img" />
+      </div>
+      <h2>Amazon Sales Dashboard</h2>
+      <p style="color: black;">This Power BI project is to design two distinct dashboards: one dedicated to Amazon product sales analysis and the other to Amazon Prime performance. These dashboards will be equipped with key performance indicators (KPIs) and charts to enable comprehensive insights...
+      </p><br>
+      <div class="btn-container">
+        <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-6.html');">
+          Live Project
+        </button>
+        <img src="./assets/powerbi.png" alt="My LinkedIn profile" class="icon" />
+      </div>
+    </div>
 
         <div class="details-container color-container"
           style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
@@ -439,22 +473,7 @@
 
 
 
-        <div class="details-container color-container"
-        style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-        <div class="article-container">
-          <img src="./assets/USA Travel.jpg" alt="Project 1" class="project-img" />
-        </div>
-        <h2>USA International Trave dashboard</h2>
-         <br>
-        <div class="btn-container">
-          <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-5.html');">
-            Live Project
-          </button>
 
-          <img src="./assets/powerbi.png" alt="My LinkedIn profile" class="icon" />
-
-        </div>
-      </div>
         <!--
         <div class="details-container color-container"
           style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
