--- a/project-3.html
+++ b/project-3.html
@@ -18,7 +18,7 @@
 <div class="details-container" style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
   <h1><u>Project Description</u></h1>
   <p style="text-align: left; color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 25px;">
-    ⏩ Created a Bank Loan Report with 3 Dashboards Summary, Overview, and Details. Provided insights into loan applications, 
+    ⏩ Created a Bank Loan Report with three Dashboards Summary, Overview, and Details. Provided insights into loan applications, 
     funded amounts, and repayments.<br> 
     ⏩ Utilized Data Power Query Editor, Data Modelling, Dax Queries, and diverse charts to represent loan trends.  <br>
     ⏩ Enabling data-driven decision-making and trend identification potentially leads to a 10% reduction in loan processing time.
