--- a/project-5.html
+++ b/project-5.html
@@ -8,25 +8,69 @@
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body>
-  <h2 style="margin-left: 0px; text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 25px;">Live Interactive Dashboard With PPT Presentation 🢃</h2>
-  <div class="about-containers">
-  <div class="details-container" style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+  <!--<h2 style="margin-left: 0px; text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px red; font-size: 25px;">Live Interactive Dashboard With PPT Presentation 🢃</h2>-->
+
   <!--<iframe title="Report Section" width="1000" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiM2JiYTA1ZWItOGNjZi00NTMwLWFlMjItMWIxODU5NmFhM2Q3IiwidCI6IjAwYmFhNjkyLTRmYTQtNGQyYS04OTRlLWM3OTA1YzkwMTUwOCJ9" frameborder="0" allowFullScreen="true"></iframe> -->
   
-  <iframe width="1000" height="580" frameborder="0" scrolling="no" src="https://app.powerbi.com/view?r=eyJrIjoiOTc5NWQ4MzItNDk0YS00Y2FjLTk5ZjAtMDJlYzU5MjRmNTIzIiwidCI6IjAwYmFhNjkyLTRmYTQtNGQyYS04OTRlLWM3OTA1YzkwMTUwOCJ9"></iframe>
+  <iframe width="1550" height="800" frameborder="0" scrolling="no" src="https://onedrive.live.com/embed?resid=AA7D8C9BEC9779FC%21411&authkey=%21ADXoqmJeGhXb1_4&em=2&wdInConfigurator=True&wdInConfigurator=True" style="margin-left: -7%;margin-top: -2%;"></iframe>
+  
+
+  
+  
   </div>
   <div class="details-container" style="background-color:#cce6ff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-    <h1><u>Project Description</u></h1>
-    <p style="text-align: left; color: #0d0d0d;font-family: 'Times New Roman', Times, serif; font-size: 25px;">
-      ⏩ Created a Bank Loan Report with 3 Dashboards Summary, Overview, and Details. Provided insights into loan applications, 
-      funded amounts, and repayments.<br> 
-      ⏩ Utilized Data Power Query Editor, Data Modelling, Dax Queries, and diverse charts to represent loan trends.  <br>
-      ⏩ Enabling data-driven decision-making and trend identification potentially leads to a 10% reduction in loan processing time.
+    <h1>Project Description: Electric Vehicle Data Analysis</h1>
+
+    <h2>Overview</h2>
+    <p>The Electric Vehicle Data Analysis project involved in-depth exploration and visualization of electric vehicle (EV) data using Microsoft Excel. Leveraging advanced features such as Pivot Tables and various chart types, this project aimed to extract valuable insights from a large dataset related to electric vehicles.</p>
   
-    </p>
-  </div>
+    <h2>Key Objectives</h2>
   
+    <h3>Top 10 Number of Vehicles by Country:</h3>
+    <p>Analyzed the distribution of electric vehicles across different countries.</p>
+    <p>Identified the top countries with the highest EV adoption rates.</p>
   
+    <h3>Number of Electric Vehicles Registered by Model Year:</h3>
+    <p>Tracked the growth trajectory of EV registrations over time.</p>
+    <p>Highlighted trends and fluctuations in adoption based on model years.</p>
+  
+    <h3>Top 10 Average Electric Range (in Km) After Full Charge:</h3>
+    <p>Calculated and ranked electric vehicle models based on their average range post full charge.</p>
+    <p>Provided insights into the most efficient EVs in terms of range.</p>
+  
+    <h3>Vehicles Eligibility for Clean Alternative Fuel Vehicle (CAFV):</h3>
+    <p>Evaluated whether vehicles met the criteria for Clean Alternative Fuel Vehicle status.</p>
+    <p>Assessed eligibility based on specific parameters.</p>
+  
+    <h3>Top 10 Number of Vehicles by Make:</h3>
+    <p>Explored the market share of different EV manufacturers.</p>
+    <p>Identified the dominant players and emerging contenders.</p>
+  
+    <h2>Technology Stack</h2>
+    <ul>
+      <li>Microsoft Excel: Utilized Excel as the primary tool for data manipulation, analysis, and visualization.</li>
+      <li>Pivot Tables: Organized and summarized large datasets efficiently.</li>
+      <li>Charts:
+        <ul>
+          <li>Bar Chart: Visualized the Top 10 Number of Vehicles by Country.</li>
+          <li>Line Chart: Tracked EV registrations by model year.</li>
+          <li>Pie Chart: Represented market share among different EV makes.</li>
+          <li>Treemap Chart: Depicted CAFV eligibility visually.</li>
+        </ul>
+      </li>
+    </ul>
+  
+    <h2>Key Achievements</h2>
+    <ul>
+      <li>Successfully derived KPIs:
+        <ul>
+          <li>TOTAL VEHICLES: Total count of electric vehicles in the dataset.</li>
+          <li>TOTAL BEV VEHICLES: Count of battery electric vehicles.</li>
+          <li>TOTAL PHEV VEHICLES: Count of plug-in hybrid electric vehicles.</li>
+        </ul>
+      </li>
+      <li>Presented findings through clear and informative visualizations.</li>
+    </ul>
   </div>
   </body>
   </html>
