--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <div class="section__text">
       <!-- <p class="section__text__p1">Hello, I'm</p> -->
       <h1 style="font-family:Segoe Print;">Hello I'm </h1>
-      <h1 class="title">Ambuj Nayan Mishra</h1>
+      <h1 class="title">Ambuj Mishra</h1>
       <h1>
         <a href="" class="typewrite" data-period="2000" data-type='[ "Data Analyst", "Business Analyst"]' style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 40px; color: black;">
           <span class="wrap"></span>
