--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       border: 1px solid #0d0d0d;
       background-color: #262626;
       border-radius: 8px;
-      width: 1475px;
+      width: 1480px;
       margin-top: -1%;
 
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -123,9 +123,9 @@
     <div class="section__text">
       <!-- <p class="section__text__p1">Hello, I'm</p> -->
       <h1 style="font-family:Segoe Print;">Hello I'm </h1>
-      <h1 class="title">Ambuj Mishra</h1>
+      <h1 class="title">Ambuj Nayan Mishra</h1>
       <h1>
-        <a href="" class="typewrite" data-period="2000" data-type='[ "Data Analyst", "Business Analyst"]' style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 40px; color: black;">
+        <a href="" class="typewrite" data-period="2000" data-type='[ "Data Analyst", "Machine Learning Engineer"]' style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue; font-size: 40px; color: black;">
           <span class="wrap"></span>
         </a>
       </h1>
