--- a/index.html
+++ b/index.html
@@ -191,127 +191,40 @@
     </div>
   </section>
   <section id="skills">
-    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
-      Explore</p>
-    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">My Skills</h1>
-    <div class="experience-details-container">
-      <div class="about-containers">
-        <div class="details-container" class="all-browsers"
-          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-          <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
-          <div class="article-container">
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Python Programming</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>My SQL</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3> MS Excel</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Power Bi</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Machine Learning</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Statistical Analysis</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Data Cleaning</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Data Transformation </h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Data Visualization</h3>
-              </div>
-            </article>
-          </div>
-        </div>
-        <div class="details-container" class="all-browsers"
-          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-          <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Soft Skills</u></h2>
-          <div class="article-container">
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Efficient Communication</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>presentation</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Continuous learning</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Analytical mindset</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Teamwork</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Problem solving</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3> Multitasking</h3>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>Work independently</h3>
-              </div>
-            </article>
-          </div>
-        </div>
-      </div>
+
+    
+
+   <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);">
+    <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
+    <div class="article-container">
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Python Programming</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>MySQL</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>MS Excel</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Power BI</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Machine Learning</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Statistical Analysis</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Data Cleaning</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Data Transformation</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Data Visualization</h3></article>
     </div>
+  </div>
+
+  <!-- Soft Skills -->
+  <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);">
+    <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Soft Skills</u></h2>
+    <div class="article-container">
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Effective Communication</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Presentation Skills</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Continuous Learning</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Analytical Mindset</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Teamwork & Collaboration</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Problem Solving</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Multitasking</h3></article>
+      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Independent Work Capability</h3></article>
+    </div>
+  </div>
+
+</div> 
   </section>
   <section id="experience">
     <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
