--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="mediaqueries.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   
 
   <style>
@@ -197,7 +199,7 @@
    <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);">
     <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
     <div class="article-container">
-      <article><h3><i class="fas fa-check-circle" style="color:green; margin-right: 8px;"></i>Python Programming</h3></article>
+      <article><i class="fas fa-check-circle" style="color:green; margin-right: 8px;"></i><h3>Python Programming</h3></article>
       <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>MySQL</h3></article>
       <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>MS Excel</h3></article>
       <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Power BI</h3></article>
