--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
     <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
     <div class="article-container">
       <article><h3>Python</h3></article>
-      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>MySQL</h3></article>
-      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>MS Excel</h3></article>
-      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Power BI</h3></article>
-      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Machine Learning</h3></article>
-      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Statistical Analysis</h3></article>
-      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Data Cleaning</h3></article>
-      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Data Transformation</h3></article>
-      <article><img src="./assets/checkmark.png" alt="Experience icon" class="icon" /><h3>Data Visualization</h3></article>
+      <article><h3>MySQL</h3></article>
+      <article><h3>MS Excel</h3></article>
+      <article><h3>Power BI</h3></article>
+      <article><h3>Machine Learning</h3></article>
+      <article><h3>Statistical Analysis</h3></article>
+      <article><h3>Data Cleaning</h3></article>
+      <article><h3>Data Transformation</h3></article>
+      <article><h3>Data Visualization</h3></article>
     </div>
   </div>
 
