--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
    <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);">
     <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
     <div class="article-container">
-      <h3>Machine Learning: Deep Learning, Neural Networks, Decision Trees, Ensemble Methods, Gradient Boosting, Support Vector Machines</h3>
+      <h3>Machine <strong>Machine Learning:</strong> Deep Learning, Neural Networks, Decision Trees, Ensemble Methods, Gradient Boosting, Support Vector Machines</h3>
       <article><h3>MySQL</h3></article>
       <article><h3>MS Excel</h3></article>
       <article><h3>Power BI</h3></article>
