--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
     <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
     <div class="article-container">
       <h3><u>Machine Learning:</u> Deep Learning, Neural Networks, Decision Trees, Ensemble Methods, Gradient Boosting</h3>
+      <h3><u>Machine Learning:</u> Deep Learning, Neural Networks, Decision Trees, Ensemble Methods, Gradient Boosting</h3>
+      <h3><u>Machine Learning:</u> Deep Learning, Neural Networks, Decision Trees, Ensemble Methods, Gradient Boosting</h3>
       <article><h3>MySQL</h3></article>
       <article><h3>MS Excel</h3></article>
       <article><h3>Power BI</h3></article>
