--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <br />
       <img src="./assets/worker.png" alt="Role Icon" class="icon" style="vertical-align: middle;" />
       <span style="font-weight: 600;">Data Science Intern</span> 
-      <span style="font-size: 14px; color: #333;">(Apr 2023 – Jul 2023)</span>
+      <span style="font-size: 14px; color: #d81818;">(Apr 2023 – Jul 2023)</span>
     </h2>
   
     <ul style="font-size: 30px; line-height: 1.6; padding-left: 20px;">
