--- a/index.html
+++ b/index.html
@@ -266,10 +266,11 @@
         <span style="font-size: 14px; color: #d81818;">(Apr 2023 – Jul 2023)</span>
       </h2>
     
-      
+      <ul style="font-size: 18px; line-height: 1.6; padding-left: 20px;">
         <li>Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.</li>
         <li>Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.</li>
         <li>Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.</li>
+        </ul>
     </div>
   </section>
 
