--- a/index.html
+++ b/index.html
@@ -239,24 +239,51 @@
     <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
       Explore My</p>
     <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">Experience</h1>
-    <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); padding: 20px; border-radius: 10px;">
+    <div class="experience-details-container">
+      <div class="about-containers">
+        <div class="details-container"
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
 
-      <h2 class="experience-sub-title" style="color: #0d0d0d; margin-bottom: 10px;">
-        <img src="./assets/office.png" alt="Company Icon" class="icon" style="vertical-align: middle;" />
-        <strong>iNeuron.ai</strong> <span style="font-weight: normal; font-size: 16px;">| Bengaluru, India</span>
-        <br />
-        <img src="./assets/worker.png" alt="Role Icon" class="icon" style="vertical-align: middle;" />
-        <span style="font-weight: 600;">Data Science Intern</span> 
-        <span style="font-size: 14px; color: #d81818;">(Apr 2023 – Jul 2023)</span>
-      </h2>
-    
-      
-        <li>Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.</li>
-        <li>Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.</li>
-        <li>Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.</li>
+          <h2 class="experience-sub-title" style="color: #0d0d0d;">
+            <img src="./assets/office.png" alt="Experience icon" class="icon" />
+
+            iNeuron.ai<br>
+            <img src="./assets/worker.png" alt="Experience icon" class="icon" />
+            Data Science Intern
+          </h2>
+          <div class="article-container">
+
+
+
+            <p style="font-size:20px; color:#0d0d0d;">
+              ⏩ worked on ML algorithms, including linear regression, decision trees, and random forests data cleaning and preprocessing. <br>
+              ⏩ Conducted exploratory data analysis (EDA) and statistical analysis (Descriptive, Inferential) on diverse datasets. <br>
+              ⏩ Developed projects including Electric Vehicle Data Analysis using Excel and Amazon Sales Dashboard using PowerBi.
+            </p>
+
+
+
+          </div>
+        </div>
+        <div class="details-container"
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          <h2 class="experience-sub-title" style="color: #0d0d0d;">
+            <img src="./assets/office.png" alt="Experience icon" class="icon" />
+
+            TechCiti Technologies Pvt Ltd<br>
+            <img src="./assets/worker.png" alt="Experience icon" class="icon" />
+            Machine Learning Intern
+          </h2>
+          <div class="article-container">
+            <p style="font-size:20px; color:#0d0d0d;">
+              ⏩ Built a predictive model using machine learning that will predict the flight ticket price based on various factors.<br>
+              ⏩ Contributed to Data Collection, conducted (EDA), engaged in Model Selection, Training and Model Evaluation.<br>
+              ⏩ Maximized Python libraries such as Pandas, NumPy, Matplotlib, Seaborn, and Scikit-learn for robust analysis.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-
-
   </section>
 
   <section id="projects">
