--- a/index.html
+++ b/index.html
@@ -275,6 +275,23 @@
             <li>Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.</li>
           </div>
         </div>
+        <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); padding: 20px; border-radius: 10px;">
+          <div class="article-container">
+          <h2 class="experience-sub-title" style="color: #0d0d0d; margin-bottom: 10px;">
+            <img src="./assets/office.png" alt="Company Icon" class="icon" style="vertical-align: middle;" />
+            <strong>iNeuron.ai</strong> <span style="font-weight: normal; font-size: 16px;">| Bengaluru, India</span>
+            <br />
+            <img src="./assets/worker.png" alt="Role Icon" class="icon" style="vertical-align: middle;" />
+            <span style="font-weight: 600;">Data Science Intern</span> 
+            <span style="font-size: 14px; color: #d81818;">(Apr 2023 – Jul 2023)</span>
+          </h2>
+        
+          
+            <li>Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.</li>
+            <li>Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.</li>
+            <li>Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.</li>
+          </div>
+        </div>
       </div>
     </div>
   </section>
