--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
     </div>
   </section>
   <section id="skills">
-
+    <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
+      Explore My</p>
+    <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">SKILLS</h1>
 
    <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);">
      <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
