--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
       </h2>
     
       
-        <li style="font-size: 18px; line-height: 1.6;"></li>>Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.</li>
-        <li style="font-size: 18px; line-height: 1.6;">Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.</li>
-        <li style="font-size: 18px; line-height: 1.6;">Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.</li>
+        <li style="font-size: 18px; line-height: 1.6;  margin: 0;""></li>>Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.</li>
+        <li style="font-size: 18px; line-height: 1.6; margin: 0;"">Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.</li>
+        <li style="font-size: 18px; line-height: 1.6; margin: 0;"">Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.</li>
       </div>
     </div>
 
