--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
     </h2>
   
     
-      <li>Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.</li>
-      <li>Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.</li>
+      <p>Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.</p>
+      <p>Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.</p1>
       <li>Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.</li>
     </div>
   </div>
