--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
     </h2>
   
     
-      <p>Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.</p>
-      <p>Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.</p1>
-      <li>Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.</li>
+      .Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.
+      .Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.
+      .Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.
     </div>
   </div>
 
