--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <span style="font-size: 14px; color: #d81818;">(Apr 2023 – Jul 2023)</span>
       </h2>
     
-      <ul style="font-size: 18px; line-height: 1.6; background: #99ccff; padding-left: 20px; margin: 0;border-color: #99ccff;">      
+      <ul style="font-size: 18px; line-height: 1.6; background: #99ccff; padding-left: 20px; margin: 0;border-color: #99ccff;box-shadow: none;">      
         <li>Executed end-to-end machine learning projects, improving data cleaning and preprocessing efficiency by 20%.</li>
         <li>Conducted exploratory data analysis (EDA) on diverse datasets, enhancing insights and predictive capabilities.</li>
         <li>Developed and fine-tuned ML models including linear regression, decision trees, and random forests with 80% accuracy.</li>
