--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
       <div class="article-container">
       <h5 class="experience-sub-title" style="color: #0d0d0d; margin-bottom: 10px;">
         <img src="./assets/office.png" alt="Company Icon" class="icon" style="vertical-align: middle;" />
-        <strong>iNeuron.ai</strong> <span style="font-weight: normal; font-size: 16px;">| Bengaluru, India</span>
+        <strong>iNeuron.ai</strong> <span style="font-weight: normal; font-size: 16px;color: #d81818;">| Bengaluru, India</span>
         <br />
         <img src="./assets/worker.png" alt="Role Icon" class="icon" style="vertical-align: middle;" />
-        <span style="font-weight: 600;color: #d81818;">Data Science Intern</span> 
+        <span style="font-weight: 600;">Data Science Intern</span> 
         <span style="font-size: 14px; color: #d81818;">(Apr 2023 – Jul 2023)</span>
       </h5>
     
