--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </ul>
       </div>
     </div>
-
+     <br>
     <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); padding: 20px; border-radius: 10px;">
       <div class="article-container">
       <h10 class="experience-sub-title" style="color: #0d0d0d; margin-bottom: 10px;">
@@ -259,7 +259,7 @@
       </ul>
       </div>
     </div>
-
+      <br>
     <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); padding: 20px; border-radius: 10px;">
       <div class="article-container">
       <h5 class="experience-sub-title" style="color: #0d0d0d; margin-bottom: 10px;">
@@ -272,9 +272,9 @@
       </h5>
     
       <ul style="font-size: 18px; line-height: 1.6; background: #99ccff; padding-left: 20px; margin: 0;border-color: #99ccff;box-shadow: none;">      
-        <li>Built a machine learning model that will predict the flight ticket price with 80% of accuracy.</li>
-        <li>Worked on Data Collection, conducted (EDA), engaged in Model Selection, Training and Model Evaluation.</li>
-        <li>Maximized Python libraries such as Pandas, NumPy, Matplotlib, Seaborn, and Scikit-Learn for robust analysis.</li>
+        <li>⏩ Built a machine learning model that will predict the flight ticket price with 80% of accuracy.</li>
+        <li>⏩ Worked on Data Collection, conducted (EDA), engaged in Model Selection, Training and Model Evaluation.</li>
+        <li>⏩ Maximized Python libraries such as Pandas, NumPy, Matplotlib, Seaborn, and Scikit-Learn for robust analysis.</li>
       </ul>
       </div>
     </div>
