--- a/index.html
+++ b/index.html
@@ -203,16 +203,12 @@
       <h3>
         <strong>iNeuron.ai</strong> <u>Machine Learning:</u> Deep Learning, Neural Networks, Decision Trees, Ensemble Methods, Gradient Boosting
       </h3>
-      <h3><u>Machine Learning:</u> Deep Learning, Neural Networks, Decision Trees, Ensemble Methods, Gradient Boosting</h3>
-      <h3><u>Machine Learning:</u> Deep Learning, Neural Networks, Decision Trees, Ensemble Methods, Gradient Boosting</h3>
-      <article><h3>MySQL</h3></article>
-      <article><h3>MS Excel</h3></article>
-      <article><h3>Power BI</h3></article>
-      <article><h3>Machine Learning</h3></article>
-      <article><h3>Statistical Analysis</h3></article>
-      <article><h3>Data Cleaning</h3></article>
-      <article><h3>Data Transformation</h3></article>
-      <article><h3>Data Visualization</h3></article>
+      <h3><u>Data Analysis & Visualization:</u> Python, SQL, Looker Studio, Excel, Data Cleaning, Data Transformation</h3>
+      <h3><u>Machine Learning:</u> Regression, Classification, Clustering, Feature engineering</h3>
+      <h3><u>MLOps:</u> MLFlow, DVC, CI/CD, Docker, Kubernetes, Jenkins, GitHub, minikube, Kubeflow, Dagshub, Grafan</h3>
+      <h3><u>Database & Cloud:</u> Google Cloud Platform (GCp), Bigquery</h3>
+      <h3><u>Frameworks & Libraries:</u> Pandas, Numpy, Scikit-learn, Jupyter Notebook, VS Code, flask</h3>
+
     </div>
   </div>
 </div> 
