--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </h2>
     
       <ul style="font-size: 18px; line-height: 1.6; background: #99ccff; padding-left: 20px; margin: 0;border-color: #99ccff;box-shadow: none;">      
-        <li>⏩ Worked on customer segmentation and generated impactful insights and dashboards using BigQuery, Python and Looker<br><br><br><br> Studio to support marketing campaigns, resulting in a 20% increase in sales.</li>
+        <li>⏩ Worked on customer segmentation and generated impactful insights and dashboards using BigQuery, Python and Looker Studio to support marketing campaigns, resulting in a 20% increase in sales.</li>
         <li>⏩ Managed performance tracking for 60+ online sales agents by building automated dashboards in Looker Studio using BigQuery,G-Sheets, delivering real-time insights that improved team productivity by 20%.</li>
         <li>⏩ Collaborated with the finance team to identify credit customers developing dashboards and insights that enhanced the acquisition of 16K new customers and achieved 2x growth in sales.</li>
       </ul>
