--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
    <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);">
      <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
-     <div class="article-container">
+     <div class="article-container" ,style="align-content:left">
 
       <h3><u>Data Analysis & Visualization:</u> Python, SQL, Looker Studio, Excel, Data Cleaning, Data Transformation</h3>
       <h3><u>Machine Learning:</u> Regression, Classification, Clustering, Feature engineering</h3>
