--- a/index.html
+++ b/index.html
@@ -201,11 +201,11 @@
      <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
      <div class="article-container">
 
-      <h3 style="align-content:left";><u>Data Analysis & Visualization:</u> Python, SQL, Looker Studio, Excel, Data Cleaning, Data Transformation</h3>
-      <h3 style="align-content:left";><u style="align-content:left">Machine Learning:</u> Regression, Classification, Clustering, Feature engineering</h3>
-      <h3><u>MLOps:</u> MLFlow, DVC, CI/CD, Docker, Kubernetes, Jenkins, GitHub, minikube, Kubeflow, Dagshub, Grafan</h3>
-      <h3><u>Database & Cloud:</u> Google Cloud Platform (GCp), Bigquery</h3>
-      <h3><u>Frameworks & Libraries:</u> Pandas, Numpy, Scikit-learn, Jupyter Notebook, VS Code, flask</h3>
+      <h3 style="text-align: left;"><u>Data Analysis & Visualization:</u> Python, SQL, Looker Studio, Excel, Data Cleaning, Data Transformation</h3>
+      <h3 style="text-align: left;"><u style="align-content:left">Machine Learning:</u> Regression, Classification, Clustering, Feature engineering</h3>
+      <h3 style="text-align: left;"><u>MLOps:</u> MLFlow, DVC, CI/CD, Docker, Kubernetes, Jenkins, GitHub, minikube, Kubeflow, Dagshub, Grafan</h3>
+      <h3 style="text-align: left;"><u>Database & Cloud:</u> Google Cloud Platform (GCp), Bigquery</h3>
+      <h3 style="text-align: left;"><u>Frameworks & Libraries:</u> Pandas, Numpy, Scikit-learn, Jupyter Notebook, VS Code, flask</h3>
  
     </div>
   </div>
