--- a/index.html
+++ b/index.html
@@ -202,10 +202,10 @@
      <div class="article-container">
 
       <h3 style="text-align: left;"><u style="color: #d81818;">Data Analysis & Visualization:</u> Python, SQL, Looker Studio, Excel, Data Cleaning, Data Transformation</h3>
-      <h3 style="text-align: left;"><u>Machine Learning:</u> Regression, Classification, Clustering, Feature engineering</h3>
-      <h3 style="text-align: left;"><u>MLOps:</u> MLFlow, DVC, CI/CD, Docker, Kubernetes, Jenkins, GitHub, minikube, Kubeflow, Dagshub, Grafan</h3>
-      <h3 style="text-align: left;"><u>Database & Cloud:</u> Google Cloud Platform (GCp), Bigquery</h3>
-      <h3 style="text-align: left;"><u>Frameworks & Libraries:</u> Pandas, Numpy, Scikit-learn, Jupyter Notebook, VS Code, flask</h3>
+      <h3 style="text-align: left;"><u style="color: #d81818;">Machine Learning:</u> Regression, Classification, Clustering, Feature engineering</h3>
+      <h3 style="text-align: left;"><u style="color: #d81818;">MLOps:</u> MLFlow, DVC, CI/CD, Docker, Kubernetes, Jenkins, GitHub, minikube, Kubeflow, Dagshub, Grafan</h3>
+      <h3 style="text-align: left;"><u style="color: #d81818;">Database & Cloud:</u> Google Cloud Platform (GCp), Bigquery</h3>
+      <h3 style="text-align: left;"><u style="color: #d81818;">Frameworks & Libraries:</u> Pandas, Numpy, Scikit-learn, Jupyter Notebook, VS Code, flask</h3>
  
     </div>
   </div>
