--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
       Explore My</p>
     <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">SKILLS</h1>
 
-   <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);">
+   <div class="details-container" style="background-color:#99ccff; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);text-align: left;">
      <h2 class="experience-sub-title" style="color: #0d0d0d;"><u>Technical Skills</u></h2>
      <div class="article-container">
-
-      <h3 style="text-align: left;"><u style="color: #d81818;">Data Analysis & Visualization:</u> Python, SQL, Looker Studio, Excel, Data Cleaning, Data Transformation</h3>
-      <h3 style="text-align: left;"><u style="color: #d81818;">Machine Learning:</u> Regression, Classification, Clustering, Feature engineering</h3>
-      <h3 style="text-align: left;"><u style="color: #d81818;">MLOps:</u> MLFlow, DVC, CI/CD, Docker, Kubernetes, Jenkins, GitHub, minikube, Kubeflow, Dagshub, Grafan</h3>
-      <h3 style="text-align: left;"><u style="color: #d81818;">Database & Cloud:</u> Google Cloud Platform (GCp), Bigquery</h3>
-      <h3 style="text-align: left;"><u style="color: #d81818;">Frameworks & Libraries:</u> Pandas, Numpy, Scikit-learn, Jupyter Notebook, VS Code, flask</h3>
+      style="text-align: left;"
+      <h3><u style="color: #d81818;">Data Analysis & Visualization:</u> Python, SQL, Looker Studio, Excel, Data Cleaning, Data Transformation</h3>
+      <h3><u style="color: #d81818;">Machine Learning:</u> Regression, Classification, Clustering, Feature engineering</h3>
+      <h3><u style="color: #d81818;">MLOps:</u> MLFlow, DVC, CI/CD, Docker, Kubernetes, Jenkins, GitHub, minikube, Kubeflow, Dagshub, Grafan</h3>
+      <h3><u style="color: #d81818;">Database & Cloud:</u> Google Cloud Platform (GCp), Bigquery</h3>
+      <h3><u style="color: #d81818;">Frameworks & Libraries:</u> Pandas, Numpy, Scikit-learn, Jupyter Notebook, VS Code, flask</h3>
  
     </div>
   </div>
