--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     li a {
       display: block;
       color: #f6f3f3;
-      text-align: center;
+      text-align: left;
       padding: 10px 8px;
       text-decoration: none;
       
