--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@
         </div>
         <div class="text-container">
           <p>
-            ⏩ As a Data Analyst with a Master's in Computer Applications (MCA) and a Bachelor's in Computer Applications (BCA), I bring a blend of academic rigor and practical expertise to the table. Proficient in Python, SQL, Excel, and Power BI, I have honed my skills through hands-on experience in various internships and projects.<br>
+           <h3> ⏩ As a Data Analyst with a Master's in Computer Applications (MCA) and a Bachelor's in Computer Applications (BCA), I bring a blend of academic rigor and practical expertise to the table. Proficient in Python, SQL, Excel, and Power BI, I have honed my skills through hands-on experience in various internships and projects.</h3><br>
             <br>
-            ⏩ I have completed several internships in data science and machine learning, where I worked on various projects spanning the spectrum of machine learning applications.<br>
+            <h3> ⏩ I have completed several internships in data science and machine learning, where I worked on various projects spanning the spectrum of machine learning applications.</h3><br>
+             </h3>            <br>
+            <h3> ⏩ My projects underscore my proficiency in leveraging data to drive actionable outcomes. From crafting an Excel sales dashboard, optimizing hotel reservation strategies, to analyzing bank loan trends, I have consistently delivered impactful insights and solutions.</h3><br>
             <br>
-            ⏩ My projects underscore my proficiency in leveraging data to drive actionable outcomes. From crafting an Excel sales dashboard, optimizing hotel reservation strategies, to analyzing bank loan trends, I have consistently delivered impactful insights and solutions.<br>
-            <br>
-            ⏩ Certified in SQL, Python, and Machine Learning, I am committed to continuous learning and growth. Now, I am actively seeking new job opportunities where I can apply my skills, contribute to meaningful projects, and continue my journey of professional development in the field of data analytics.<br>
+            <h3> ⏩ Certified in SQL, Python, and Machine Learning, I am committed to continuous learning and growth. Now, I am actively seeking new job opportunities where I can apply my skills, contribute to meaningful projects, and continue my journey of professional development in the field of data analytics.</h3><br>
           </p>
         </div>
       </div>
