--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           <p style="color: black;"> Built a complete MLOps pipeline for cancer prediction using LightGBM, with real-time inference enabled via 
 a Flask-based web app potential to reduce diagnostic latency by up to 40%. 
 • Integrated MLflow and DagsHub for experiment tracking, model versioning, and collaborative work. 
-capable of saving 10+ hours per week in manual tracking and version conflicts. 
+capable of saving 10+ hours... 
           </p><br>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-1.html');">
