--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="article-container">
             <img src="./assets/Screenshot 2024-02-10 155307.jpg" alt="Project 1" class="project-img" />
           </div>
-          <h2>Colorectal Cancer Prediction</h2>
+          <h2>Colorectal Cancer Prediction - MLOPS</h2>
           <p style="color: black;"> Built a complete MLOps pipeline for cancer prediction using LightGBM, with real-time inference enabled via 
 a Flask-based web app potential to reduce diagnostic latency by up to 40%. 
 • Integrated MLflow and DagsHub for experiment tracking, model versioning, and collaborative work. 
