--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         <div class="details-container color-container"
           style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
-            <img src="./assets/Best-Colon-Cancer-Treatment-in-India.jpg" alt="Project 1" class="project-img" style="height: auto; width: 80%;" />
+            <img src="./assets/Best-Colon-Cancer-Treatment-in-India.jpg" alt="Project 1" class="project-img" style="height: auto; width: auto;" />
           </div>
           <h2>Colorectal Cancer Prediction - MLOPS</h2>
           <p style="color: black;"> Built a complete MLOps pipeline for cancer prediction using LightGBM, with real-time inference enabled via 
