--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ a Flask-based web app potential to reduce diagnostic latency by up to 40%.
 capable of saving 10+ hours... 
           </p><br>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="window.location.assign('./project-1.html');">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Colorectal_Cancer_Prediction'">
               Live Project
             </button>
 
