--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
     <p class="section__text__p1" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">
       Browse My Recent</p> 
     <h1 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">Projects</h1>
+    <h3 class="title" style="text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;">Machine Learning</h1>
     <div class="experience-details-container">
       <div class="about-containers"
         style="display:grid; grid-template-columns:auto auto; grid-gap: 15px; padding: 20px;">
