--- a/index.html
+++ b/index.html
@@ -316,6 +316,29 @@ capable of saving 10+ hours...
         </div>
 
 
+                <div class="details-container color-container"
+          style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
+          <div class="article-container">
+            <img src="./assets/Best-Colon-Cancer-Treatment-in-India.jpg" alt="Project 1" class="project-img" />
+          </div>
+          <h2>Hotel Reservation Prediction - MLOPS</h2>
+          <p style="color: black;"> Built a complete MLOps pipeline for cancer prediction using LightGBM, with real-time inference enabled via 
+a Flask-based web app potential to reduce diagnostic latency by up to 40%. 
+• Integrated MLflow and DagsHub for experiment tracking, model versioning, and collaborative work. 
+capable of saving 10+ hours... 
+          </p><br>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/ambuj6392/Hotel-Reservation-Prediction-MLOps'">
+              Live Project
+            </button>
+
+            <img src="./assets/excel (1).png" alt="My LinkedIn profile" class="icon" />
+            <img src="./assets/Microsoft Powerpoint Logo Vector.png" alt="My LinkedIn profile" class="icon" />
+
+          </div>
+        </div>
+
+
         <div class="details-container color-container"
           style="background-color:#99ccff; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
           <div class="article-container">
