--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
   <section id="profile">
     <div class="section__pic-container">
-      <img src="assets/worker.png" alt="John Doe profile picture" />
+      <img src="assets/picofme (7).png" alt="John Doe profile picture" />
     </div>
     <div class="section__text">
       <!-- <p class="section__text__p1">Hello, I'm</p> -->
