--- a/index.html
+++ b/index.html
@@ -121,17 +121,15 @@
   <section id="profile">
 
 
-<div class="section__pic-container" style="position: relative; display: inline-block;">
-  <img src="assets/picofme (7).png" alt="John Doe profile picture" style="display: block; width: 100%; height: auto;" />
-  <div style="position: absolute; top: 10%; left: 5%;
-              text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px blue;
-              font-size: 40px;
-              color: black;">
-    John Doe
-  </div>
+<div class="section__pic-container">
+  <img 
+    src="assets/picofme (7).png" 
+    alt="John Doe profile picture" 
+    style="box-shadow: 0 4px 15px rgba(0, 0, 255, 0.6); border-radius: 10px;" 
+  />
 </div>
 
-
+    
     <div class="section__text">
       <!-- <p class="section__text__p1">Hello, I'm</p> -->
       <h1 style="font-family:Segoe Print;">Hello I'm </h1>
