--- a/index.html
+++ b/index.html
@@ -121,12 +121,18 @@
   <section id="profile">
 
 
-<div class="section__pic-container">
+<!-- <div class="section__pic-container">
   <img 
     src="assets/picofme (7).png" 
     alt="John Doe profile picture" 
     style="box-shadow: 0 4px 15px rgba(0, 0, 255, 0.6); border-radius: 10px;" 
   />
+</div> -->
+<div style="display: flex; justify-content: center; align-items: center;">
+  <img 
+    src="assets/picofme (7).png" 
+    alt="Profile picture"
+    style="width: 200px; height: 200px; border-radius: 50%; box-shadow: 0 0 20px rgba(0,0,255,0.6);" />
 </div>
 
     
