--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
 
 <!-- --------------------------------------------- -->
 <section id="skills" class="skills-section">
-  <div class="section-header">
+  <!-- <div class="section-header">
     <p class="section-subtitle">Explore My</p>
     <h1 class="section-title">Skills</h1>
-  </div>
+  </div> -->
   <div class="skills-container">
     <h2 class="skills-category">Technical Skills</h2>
     <div class="skills-grid">
