--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <section id="profile">
     <div class="profile-container">
-      <img src="./assets/picofme.png" alt="Ambuj Nayan Mishra profile picture" class="profile-pic" />
+      <img src="./assets/picofme (7).png" alt="Ambuj Nayan Mishra profile picture" class="profile-pic" />
       <div class="profile-text">
         <p class="section-subtitle">Hello, I'm</p>
         <h1 class="section-title">Ambuj Nayan Mishra</h1>
