--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="about-details">
         <div class="about-cards">
           <div class="card">
-            <img src="./assets/experience.png" alt="Experience icon" class="card-icon" />
+            <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Experience</h3>
             <p>Data Analyst<br />Machine Learning Intern<br />Data Science Intern</p>
           </div>
